[tool.poetry]
name = "langchain-rag-experiments"
version = "0.1.0"
description = ""
authors = ["Thomgram <vui.thomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.334"
langchain-cli = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
